--- a/app/scripts/components/expandingTable/tpl-expanding-table.html
+++ b/app/scripts/components/expandingTable/tpl-expanding-table.html
@@ -1,44 +1,39 @@
 <div>
-    <div>
-
-    </div>
-    <div class="panel-body">
-        <div class="row">
-
-            <div>
-                <table class="table dataTable table-bordered table-hover table-condensed table-striped"
-                       data-ng-click="expandTblCtrl.focussed=true">
-                    <thead>
-                    <tr>
-                        <th></th>
-                        <th ng-repeat="heading in expandTblCtrl.columnDef">{{heading.label |translate}}</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr id="tr-contact-{{$index}}" class="clickableRow"
-                        data-ng-class="{'selected':$index == expandTblCtrl.tableRowIndexCurrExpanded}"
-                        aria-expanded="expandTblCtrl.getExpandedState($index)" index="{{$index}}"
-                        data-ng-repeat-start="record in expandTblCtrl.listItems"
-                        title="{{'TOGGLE_EXPAND' |translate}} {{$index+1}}"
-                        data-ng-click="expandTblCtrl.selectTableRow($index)">
-                        <td>
+    <table class="table dataTable table-bordered table-hover table-condensed table-striped">
+        <thead>
+        <tr>
+            <th></th>
+            <th ng-repeat="heading in expandTblCtrl.columnDefinitions">{{heading.label |translate}}</th>
+            <th ng-if="!expandTblCtrl.disableErrorCol">{{'ERRORS'|translate}}</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr id="tr-contact-{{$index}}" class="clickableRow"
+            data-ng-class="{'selected':$index == expandTblCtrl.tableRowIndexCurrExpanded}"
+            aria-expanded="expandTblCtrl.getExpandedState($index)" index="{{$index}}"
+            data-ng-repeat-start="record in expandTblCtrl.listItems"
+            title="{{'TOGGLE_EXPAND' |translate}} {{$index+1}}"
+            data-ng-click="expandTblCtrl.selectTableRow($index)">
+            <td width="2%">
                             <span ng-class="{'fa fa-caret-down fa-lg fa-fw':expandTblCtrl.getExpandedState($index) ,'fa fa-caret-right fa-lg fa-fw':!expandTblCtrl.getExpandedState($index)}"
                                   ng-class='{open:expandTblCtrl.getExpandedState($index)}'></span>
-                        </td>
-                        <td ng-repeat="def in expandTblCtrl.columnDef" width="{{def.width}}%">
-                            {{record[def.binding]|translate}}
-                        </td>
-                    </tr>
-                    <tr data-ng-show="!expandTblCtrl.dayDataCollapse[$index]" data-ng-repeat-end>
-                        <td colspan="{{expandTblCtrl.numberCols+1}}">
-                            <div ng-transclude>
-                            </div>
-                        </td>
-                    </tr>
-                    </tbody>
-                </table>
-            </div>
-        </div>
-
-    </div>
+            </td>
+            <td ng-repeat="def in expandTblCtrl.columnDefinitions" width="{{def.width}}%">
+                {{record[def.binding]|translate}}
+            </td>
+            <td  ng-if="!expandTblCtrl.disableErrorCol" width="5%">
+               {{expandTblCtrl.formInError(expandTblCtrl['transcludeForm'+$index])|translate}}
+            </td>
+        </tr>
+        <tr data-ng-show="!expandTblCtrl.dayDataCollapse[$index]" data-ng-repeat-end>
+            <td colspan="{{expandTblCtrl.numberCols}}">
+                <ng-form name="expandTblCtrl.transcludeForm{{$index}}">
+                <div ng-transclude>
+                </div>
+                </ng-form>
+            </td>
+        </tr>
+        </tbody>
+    </table>
 </div>
+
