--- a/dossier/app/components/formulations/tpl-active-ing-list.html
+++ b/dossier/app/components/formulations/tpl-active-ing-list.html
@@ -1,32 +1,22 @@
-<ng-form name="activeIngListForm">
-    <h2>{{'MEDICINAL_INGRED'|translate}}</h2>
-    <input type="textbox" required="true" ng-show="false" name="noActive" id="noActive{{$id}}"
-           data-ng-model="ailCtrl.noActives"/>
-    <label for="noActive{{$id}}" ng-if="activeIngListForm.noActive.$invalid">
-        <strong id="active-error" class="error" >
-        <span class="label label-danger" ng-messages="activeIngListForm.noActive.$error">
-            <span ng-message="required"><span translate="MSG_ERR_ONE_ACTIVE"></span></span>
-        </span>
-        </strong>
-    </label>
+<ng-form name="ailCtrl.activeIngListForm">
 
-    <cmp-expanding-table title="{{'ACTIVE_LIST'|translate}}" list-items="ailCtrl.ingList"
+    <cmp-expanding-table title="{{'ACTIVE_LIST'|translate}}" list-items="ailCtrl.ingList" reset-to-collapsed="ailCtrl.resetToCollapsed"
                          column-def="ailCtrl.colNames" select-record="ailCtrl.selectRecord"
                          disable-selection="!ailCtrl.isDetailValid">
 
-        <cmp-active-ing-record record="$parent.record" on-update="ailCtrl.updateIng($parent.$index,ing)"
-                               on-delete="ailCtrl.deleteIng($parent.$index)" delete-btn="true"></cmp-active-ing-record>
+        <cmp-active-ing-record record="$parent.record" on-update="ailCtrl.updateIng($parent.$index,ing)" on-add-ing="ailCtrl.addIng(ing)"
+                               on-delete="ailCtrl.deleteIng($parent.$index)" delete-btn="true" is-detail-valid="ailCtrl.setValid(state)"></cmp-active-ing-record>
 
     </cmp-expanding-table>
 
     <cmp-active-ing-record ng-if="ailCtrl.newIngFormShown === true" on-add-ing="ailCtrl.addIng(ing)"
-                           on-cancel="ailCtrl.newIngFormShown = false" delete-btn="false"></cmp-active-ing-record>
+                           on-cancel="ailCtrl.onNewCancel()" delete-btn="false"></cmp-active-ing-record>
 
     <div class="mrgn-tp-md mrgn-bttm-lg">
         <div class="btn-group-sm col-md-12 text-right">
             <input type="submit" value="Add Ingredient" class="btn btn-primary"
-                   data-ng-disabled="ailCtrl.newIngFormShown"
-                   ng-click="ailCtrl.newIngFormShown = true"/>
+                   data-ng-disabled="ailCtrl.addNewDisabled()"
+                   ng-click="ailCtrl.addNewIngredientState()"/>
         </div>
     </div>
 </ng-form>
