--- a/dossier/app/components/formulations/tpl-formulation-record.html
+++ b/dossier/app/components/formulations/tpl-formulation-record.html
@@ -4,11 +4,6 @@
             <legend>{{'FORMULATION_DETAILS'|translate}}&nbsp;{{formulRecCtrl.frmModel.formulationId}}</legend>
 
             <div class="row">
-                <!--<div class="form-group col-md-6">
-                    <label for="formul-id"><span class="field-name">{{'FORMULATION_ID'|translate}}</span></label>
-                        <input type="text" id="formul-id" data-ng-model="formulRecCtrl.frmModel.formulationId"
-                               class="form-control full-width" name="text" maxlength="100" size="100"/>
-                </div>-->
                 <div class="form-group col-md-12">
                     <label for="formul-name"><span class="field-name">{{'FORMULATION_NAME'|translate}}</span></label>
                     <input type="text" id="formul-name" data-ng-model="formulRecCtrl.frmModel.formulationName"
@@ -20,7 +15,7 @@
                     <label for="dosage-form-listh_{{$id}}" class="required"><span class="field-name">{{'DOSAGE_FORM'|translate}}</span>
                         <strong class="required">{{"REQUIRED" |translate}}</strong>
                         <select id="dosage-form-listh_{{$id}}" data-ng-model="formulRecCtrl.frmModel.dosageForm"
-                                name="dosageForm" class="form-control full-width"  required
+                                name="dosageForm" class="form-control full-width" required
                                 ng-options="formType |translate for formType in formulRecCtrl.dosageFormList | orderByTranslated">
                         </select>
                         <strong id="dosageForm-error" class="error"
@@ -31,7 +26,7 @@
                         </strong>
                     </label>
                 </div>
-                <div class="col-md-6 form-group"  ng-class="{'has-error':formulationRecForm.dosageOther.$invalid}"
+                <div class="col-md-6 form-group" ng-class="{'has-error':formulationRecForm.dosageOther.$invalid}"
                      ng-show="formulRecCtrl.isDosageOther()">
                     <label for="dosage-form-other_(($id}}" class="required">
                         <span class="field-name">{{'DOSAGE_FORM_OTHER'|translate}}</span>
@@ -53,41 +48,91 @@
 
 
             <div class="container-fluid">
-                <cmp-active-ing-list ingredients="formulRecCtrl.frmModel.activeIngList" on-update="formulRecCtrl.updateActiveIngList(list)"></cmp-active-ing-list>
+                <section class="panel panel-default">
+                    <header class="panel-heading">
+                        <h3 class="panel-title">{{'MEDICINAL_INGRED'|translate}}</h3>
+                        <strong id="noactive-error" class="error" ng-if="formulRecCtrl.noActives()">
+                                <span class="label label-danger" ng-messages="formulationRecForm.noActiveFld.$error">
+                                    <span ng-message="required"><span translate="MSG_ERR_ONE_ACTIVE"></span></span>
+                                </span>
+                        </strong>
+                    </header>
+                    <div class="panel-body container-fluid">
+                        <input type="text" required ng-show="false" name="noActiveFld" id="noActive"
+                               aria-hidden="true" data-ng-model="formulRecCtrl.noActiveValues"/>
+                        <cmp-active-ing-list ingredients="formulRecCtrl.frmModel.activeIngList"
+                                             on-update="formulRecCtrl.updateActiveIngList(list)"></cmp-active-ing-list>
+                    </div>
+                </section>
             </div>
             <div class="container-fluid">
-                <cmp-non-med-ing-list ingredients="formulRecCtrl.frmModel.nMedIngList" on-update="formulRecCtrl.updateNonMedIngList(list)"></cmp-non-med-ing-list>
+                <section class="panel panel-default">
+                    <header class="panel-heading">
+                        <h3 class="panel-title">{{'NONMEDICINAL_INGRED'|translate}}</h3>
+                    </header>
+                    <div class="panel-body">
+                        <cmp-non-med-ing-list ingredients="formulRecCtrl.frmModel.nMedIngList"
+                                              on-update="formulRecCtrl.updateNonMedIngList(list)"></cmp-non-med-ing-list>
+                    </div>
+                </section>
             </div>
             <div class="container-fluid">
-                <cmp-container-type-list containers="formulRecCtrl.frmModel.containerTypes" on-update="formulRecCtrl.updateContainerTypeList(list)"></cmp-container-type-list>
+                <section class="panel panel-default">
+                    <header class="panel-heading">
+                        <h3 class="panel-title">{{'CONTAINER_TYPES'|translate}}</h3>
+                    </header>
+                    <div class="panel-body">
+                        <cmp-container-type-list containers="formulRecCtrl.frmModel.containerTypes"
+                                                 on-update="formulRecCtrl.updateContainerTypeList(list)"></cmp-container-type-list>
+                    </div>
+                </section>
+            </div>
+
+            <div class="container-fluid">
+                <section class="panel panel-default">
+                    <header class="panel-heading">
+                        <h3 class="panel-title">{{'ANIMAL_HUMAN_HDING'|translate}}</h3>
+                    </header>
+                    <div class="panel-body">
+                        <cmp-material-ing-list ingredients="formulRecCtrl.frmModel.animalHumanMaterials"
+                                               on-update="formulRecCtrl.updateMaterialList(list)"></cmp-material-ing-list>
+                    </div>
             </div>
             <div class="container-fluid">
-                <cmp-material-ing-list ingredients="formulRecCtrl.frmModel.animalHumanMaterials" on-update="formulRecCtrl.updateMaterialList(list)"></cmp-material-ing-list>
-            </div>
-            <div class="container-fluid">
-                <cmp-roa list-items="formulRecCtrl.frmModel.routeAdmins" on-update="formulRecCtrl.updateRoaList(list)"></cmp-roa>
+                <section class="panel panel-default">
+                    <header class="panel-heading">
+                        <h3 class="panel-title">{{'ROA_TITLE'|translate}}</h3>
+                        <strong id="noroa-error" class="error" ng-if="formulRecCtrl.noROA()">
+                                <span class="label label-danger" ng-messages="formulationRecForm.noROAFld.$error">
+                                    <span ng-message="required"><span translate="MSG_ERR_ONE_ROA"></span></span>
+                                </span>
+                        </strong>
+                    </header>
+                    <div class="panel-body">
+                        <input type="text" required ng-show="false" name="noROAFld" id="noROA"
+                               aria-hidden="true"
+                               data-ng-model="formulRecCtrl.noROAValues"/>
+                        <cmp-roa-list records="formulRecCtrl.frmModel.routeAdmins" show-errors=""></cmp-roa-list>
+                    </div>
+                </section>
             </div>
             <div class="container-fluid">
                 <section class="panel panel-default">
                     <header class="panel-heading">
                         <h3 class="panel-title">{{'COUNTRIES_MANUFACT'|translate}}</h3>
-                        <strong id="active-error" class="error"  ng-if="formulRecCtrl.noCountry()">
+                        <strong id="country-error" class="error" ng-if="formulRecCtrl.noCountry()">
                                 <span class="label label-danger" ng-messages="formulationRecForm.noCountry.$error">
                                     <span ng-message="required"><span translate="MSG_ERR_ONE_MANCOUNTRY"></span></span>
                                 </span>
                         </strong>
                     </header>
                     <div class="panel-body">
-                       <!-- <label for="noActive{{$id}}" ng-if="formulRecCtrl.noCountry()">
-                            <strong id="active-error" class="error">
-                                <span class="label label-danger" ng-messages="formulationRecForm.noCountry.$error">
-                                    <span ng-message="required"><span translate="MSG_ERR_ONE_MANCOUNTRY"></span></span>
-                                </span>
-                            </strong>
-                        </label>-->
-                        <input type="textbox" required="true" ng-show="false" name="noCountry" id="noActive{{$id}}" aria-hidden="true"
+                        <input type="text" required ng-show="false" name="noCountry" id="noCountry{{$id}}"
+                               aria-hidden="true"
                                data-ng-model="formulRecCtrl.noCountries"/>
-                        <cmp-country-list list-items="formulRecCtrl.frmModel.countryList" on-update="formulRecCtrl.updateCountryList(list)" field-label="COUNTRY_MAN"></cmp-country-list>
+                        <cmp-country-list list-items="formulRecCtrl.frmModel.countryList"
+                                          on-update="formulRecCtrl.updateCountryList(list)"
+                                          field-label="COUNTRY_MAN"></cmp-country-list>
                     </div>
                 </section>
 
@@ -96,10 +141,10 @@
             <div class="row">
 
                 <div class="btn-group-sm col-xs-12 text-right">
-                    <input type="submit" value="Save Formulation" ng-if="!formulRecCtrl.record" class="btn btn-primary"
-                           ng-click="formulRecCtrl.save()"/>
-                    <input type="submit" ng-if="formulRecCtrl.deleteBtn === true" value="Delete Formulation" class="btn btn-danger" ng-click="formulRecCtrl.delete()"/>
-                    <input type="submit" value="Discard Changes" class="btn btn-default" ng-click="formulRecCtrl.discardChanges()">
+                    <input type="submit" ng-if="formulRecCtrl.deleteBtn === true" value="Delete Formulation"
+                           class="btn btn-danger" ng-click="formulRecCtrl.delete()"/>
+                    <input type="submit" ng-if="formulRecCtrl.deleteBtn === true" value="Copy formulation"
+                           class="btn btn-default" ng-click="formulRecCtrl.copy()"/>
                 </div>
             </div>
         </fieldset>
