--- a/dossier/app/components/schedule-a/tpl-schedule-a.html
+++ b/dossier/app/components/schedule-a/tpl-schedule-a.html
@@ -1,11 +1,10 @@
 <ng-form name="$ctrl.schedAForm">
-    <div class="panel panel-default">
-        <div class="panel-body">
+    <uib-accordion close-others="false">
+        <div uib-accordion-group heading="{{'Schedule A Claim Details' |translate}}" is-open="$ctrl.expanderOpenState" is-disabled="$ctrl.disableExpander"
+             template-url="app/lib/uib-templates/tpl-accordian-group-caret.html">
+    <div >
+        <div >
             <div class="col-md-12">
-                <fieldset>
-                    <legend>
-                        <span class="field-name">{{'ISSCHEDA'|translate}}</span>
-                    </legend>
                     <div class="row">
                         <div class="col-xs-12 form-group"
                              ng-class="{'has-error':$ctrl.schedAForm.schedDinValue.$invalid}">
@@ -19,7 +18,7 @@
                                         ng-if="$ctrl.showError($ctrl.schedAForm.schedDinValue.$invalid,$ctrl.schedAForm.schedDinValue.$touched)">
                                     <span class="label label-danger"
                                           ng-messages="$ctrl.schedAForm.schedDinValue.$error">
-                                       <!--  <span ng-message="required">{{"MSG_ERR_MAND"|translate}}</span>-->
+                                         <span ng-message="required">{{"MSG_ERR_MAND"|translate}}</span>
                                           <span ng-message="minlength"><span translate="MSG_LENGTH_8NUM"></span></span>
                                     </span>
                                 </strong>
@@ -31,14 +30,13 @@
                         <div class="col-xs-12 form-group">
                             <fieldset>
                                 <legend class="required">
-                                    <span class="field-name">{{'SCHEDA_DISEASE'|translate}}</span>
+                                    <span class=" field-name">{{'SCHEDA_DISEASE'|translate}}</span>
                                     <strong class="required"> {{"REQUIRED" |translate}}</strong>
                                  <span>
-                 <input id="oneSelected_{{$id}}" name="oneSelected" ng-show="false"
-                        ng-model="$ctrl.isSelected" ng-required="true"/>
+                 <input type="text" class="form-control" id="oneSelected_{{$id}}" name="oneDiseaseSelected" ng-show="false"
+                        ng-model="$ctrl.isClaim" required/>
                 <strong id="claim-select-error" class="error" ng-if="$ctrl.noClaimSelected()">
-                             <span class="label label-danger" aria-live="polite"
-                                   ng-messages="$ctrl.oneSelected.$error">
+                             <span class="label label-danger" aria-live="polite" ng-messages="$ctrl.schedAForm.oneDiseaseSelected.$error">
                                 <span ng-message="required">{{"MSG_ONE_SCHEDA"|translate}}</span>
                              </span>
                 </strong>
@@ -71,11 +69,10 @@
                                   ng-model="$ctrl.scheduleAModel.scheduleAClaimsIndDetails"></textarea>
                         </div>
                     </div>
-
                     <!--<pre>currentModel: {{chkl.listItems | json : spacing}}</pre>-->
-
-                </fieldset>
             </div>
         </div>
     </div>
+    </div>
 </ng-form>
+
