--- a/dossier/app/components/tabs/tpl-tabs.html
+++ b/dossier/app/components/tabs/tpl-tabs.html
@@ -4,23 +4,29 @@
     <ul class="nav nav-tabs">
         <li ng-repeat="tab in tabsCtrl.tabs" role="presentation" ng-click="tabsCtrl.selectTab($index)"
             ng-class="{'active':tabsCtrl.tabs[$index].selected === true}">
-            <a  role="tab">{{tab.label |translate}}</a>
+            <a role="tab">{{tab.label |translate}}</a>
         </li>
 
     </ul>
     <div class="tabpanels">
         <ng-form name="tabsCtrl.tabs[0].form">
-        <div id="formulations-panel" role="tabpanel" class="out" ng-if="tabsCtrl.tabs[0].selected">
-            <cmp-formulations formulations="tabsCtrl.formulationList"></cmp-formulations>
-            <!--<p>
-                Formulations Section.Formulations Section.Formulations Section.Formulations Section.Formulations Section.Formulations Section.Formulations Section.Formulations Section.
-            </p>-->
-        </div>
+            <div id="formulations-panel" role="tabpanel" class="out">
+                <div ng-show="tabsCtrl.tabs[0].selected">
+                    <cmp-formulations formulations="tabsCtrl.formulationList"
+                                      record-changed="tabsCtrl.recordChanged()"></cmp-formulations>
+                </div>
+                <!--<p>
+                    Formulations Section.Formulations Section.Formulations Section.Formulations Section.Formulations Section.Formulations Section.Formulations Section.Formulations Section.
+                </p>-->
+            </div>
         </ng-form>
         <ng-form name="tabsCtrl.tabs[1].form">
-        <div id="appendix4-panel" role="tabpanel" class="out" ng-if="tabsCtrl.tabs[1].selected">
-            <cmp-appendix-four ingredients="tabsCtrl.appendix4List"></cmp-appendix-four>
-        </div>
+            <div id="appendix4-panel" role="tabpanel" class="out">
+                <div  ng-show="tabsCtrl.tabs[1].selected">
+                <cmp-appendix-four ingredients="tabsCtrl.appendix4List"
+                                   record-changed="tabsCtrl.recordChanged()"></cmp-appendix-four>
+                </div>
+            </div>
         </ng-form>
     </div>
 </div>
